# C-Socket-Programming

./: .clangd  CMakeLists.txt  README.md
include/: socket_includes.h
src/: chatclient.c  chatserver.c  tcpclient.c  tcpserver.c
